--- a/css/app.css
+++ b/css/app.css
@@ -125,15 +125,25 @@ h1 {
   opacity: 0.9;
 
 }
+
 .winning-game {
   position: relative;
-    background-color: black;
-    border-radius: 5px;
-    border: 5px solid grey;
-    margin: auto;
-    margin-top: 30%;
-    width: 50%;
-    height: 30%;
-    text-align: center;
-    color: white;
+  background-color: black;
+  border-radius: 5px;
+  border: 5px solid grey;
+  margin: auto;
+  margin-top: 30%;
+  width: 50%;
+  height: 30%;
+  text-align: center;
+  color: white;
+}
+
+.final-star-count li {
+  list-style: none;
+  display: inline-block;
+}
+
+.winning-game-message {
+  margin-bottom: 5px;
 }
