--- a/css/app.css
+++ b/css/app.css
@@ -1,32 +1,3 @@
-/* resize at 600px width */
-/* min width 320px, max width na */
-/* min height 550px, max height 1400px */
-/* starting from 550px, every 100px rezise, maybe every 200px */
-/* phone width 320px-650px, height 550px-850px */
-/*
-anything bigger then phone sizes, min width 600px min height 600px,
-
-phone min width 320px-450px,
- min height 320-450px
-min height 450-550px
-min height 550-650px
-min height 650-750px
-min height 750-850px
-
-phone min width 450px-550px
- min height 320-450px
-min height 450-550px
-min height 550-650px
-min height 650-750px
-min height 750-850px
-
-phone min width 550px-650px
- min height 320-450px
-min height 450-550px
-min height 550-650px
-min height 650-750px
-min height 750-850px */
-
 html {
     box-sizing: border-box;
 }
@@ -60,7 +31,7 @@ body {
 h1 {
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
-    margin: 10px 0 0px
+    margin: 10px 0 0px;
 }
 
 /*
@@ -71,14 +42,14 @@ h1 {
     width: 550px;
     min-height: 475px;
     background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
-    padding: 32px;
+    padding: 30px;
     border-radius: 10px;
     box-shadow: 12px 15px 20px 0 rgba(46, 61, 73, 0.5);
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    margin: 0 0 3em;
+    margin: 0 0 48px 0;
 }
 
 .deck .card {
@@ -119,12 +90,11 @@ h1 {
 .score-panel {
     text-align: left;
     width: 500px;
-    margin: 10px 0 2px;
+    margin: 10px 0 2px 0;
     cursor: default;
 }
 
 .score-panel .stars {
-    margin: 0;
     padding: 0;
     display: inline-block;
     margin: 0 5px 0 0;
@@ -166,8 +136,8 @@ h1 {
   margin-top: 270px;
   width: 50%;
   max-width: 550px;
-  min-width: 420px;
-  height: 30%;
+  min-width: 475px;
+  max-height: 200px;
   min-height: 200px;
   text-align: center;
   color: white;
@@ -180,4 +150,248 @@ h1 {
 
 .winning-game-message {
   margin-bottom: 5px;
+}
+
+/* ***phone min width 320px-450px, */
+@media screen and (min-width: 320px) and (max-width: 449px) and (min-height: 320px) {
+  .winning-game {
+    margin-top: 35%;
+    min-width: 100%;
+  }
+
+  .score-panel {
+    width: 320px;
+  }
+
+  .score-panel .stars {
+      margin: 0 5px 0 10px;
+  }
+
+  .score-panel .restart {
+      margin-right: 10px;
+  }
+
+  .deck {
+      width: 320px;
+      min-height: 320px;
+      padding: 10px;
+  }
+
+  .deck .card {
+      height: 70px;
+      width: 70px;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 449px) and (min-height: 550px) {
+  .deck {
+      min-height: 450px;
+  }
+
+  .deck .card {
+      height: 80px;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 449px) and (min-height :650px) {
+  .winning-game {
+    margin-top: 55%;
+  }
+
+  .deck {
+      min-height: 550px;
+  }
+
+  .deck .card {
+      height: 100px;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 449px) and (min-height :850px) {
+  .winning-game {
+    margin-top: 85%;
+  }
+
+  .deck {
+      min-height: 650px;
+  }
+
+  .deck .card {
+      height: 120px;
+  }
+}
+
+/* ***phone min width 450px-550px */
+@media screen and (min-width: 450px) and (max-width: 549px) and (min-height: 320px) {
+  .winning-game {
+    margin-top: 35%;
+    min-width: 100%;
+  }
+
+  .score-panel {
+      width: 450px;
+    }
+
+    .score-panel .stars {
+        margin: 0 5px 0 10px;
+    }
+
+    .score-panel .restart {
+        margin-right: 10px;
+    }
+
+  .deck {
+      width: 450px;
+      min-height: 320px;
+      padding: 26px;
+  }
+
+  .deck .card {
+      height: 80px;
+      width: 80px;
+  }
+}
+
+@media screen and (min-width: 450px) and (max-width: 549px) and (min-height: 650px) {
+  .winning-game {
+    margin-top: 50%;
+  }
+
+  .deck {
+      min-height: 500px;
+      padding: 10px;
+  }
+
+  .deck .card {
+      height: 100px;
+      width: 100px;
+  }
+}
+
+@media screen and (min-width: 450px) and (max-width: 549px) and (min-height: 750px) {
+  .deck {
+      min-height: 600px;
+  }
+
+  .deck .card {
+      height: 120px;
+  }
+}
+
+@media screen and (min-width: 450px) and (max-width: 549px) and (min-height: 850px) {
+  .winning-game {
+    margin-top: 50%;
+  }
+
+  .deck {
+      min-height: 700px;
+  }
+
+  .deck .card {
+      height: 130px;
+  }
+}
+
+/* ***phone min width 550px-650px */
+@media screen and (min-width: 550px) and (max-width: 649px) and (min-height: 320px) {
+  .winning-game {
+    margin-top: 35%;
+    min-width: 100%;
+  }
+
+.score-panel {
+    width: 550px;
+  }
+
+  .score-panel .stars {
+      margin: 0 5px 0 10px;
+  }
+
+  .score-panel .restart {
+      margin-right: 10px;
+  }
+
+  .deck {
+      width: 550px;
+      min-height: 320px;
+  }
+}
+
+@media screen and (min-width: 550px) and (max-width: 649px) and (min-height: 650px) {
+  .winning-game {
+    margin-top: 40%;
+  }
+
+  .deck {
+      min-height: 500px;
+  }
+
+  .deck .card {
+      height: 110px;
+      width: 110px;
+  }
+}
+
+
+@media screen and (min-width: 550px) and (max-width: 649px) and (min-height: 750px) {
+  .deck {
+      min-height: 600px;
+  }
+}
+
+@media screen and (min-width: 550px) and (max-width: 649px) and (min-height: 850px) {
+  .winning-game {
+    margin-top: 50%;
+  }
+
+  .deck .card {
+      height: 130px;
+  }
+}
+
+@media screen and (min-width: 650px) and (min-height: 850px) {
+  .deck {
+      min-height: 650px;
+  }
+
+  .deck .card {
+      height: 130px;
+      width: 110px;
+  }
+}
+
+@media screen and (min-width: 650px) and (min-height: 950px) {
+  .deck {
+      min-height: 750px;
+      padding: 35px;
+  }
+}
+
+@media screen and (min-width: 950px) and (min-height: 1050px) {
+  h1 {
+    font-size: 50px;
+  }
+
+  .winning-game {
+    margin-top: 50%;
+  }
+
+  .score-panel {
+    width: 850px;
+    margin: 10px 0 2px 30px;
+    font-size: 30px;
+  }
+
+  .score-panel .restart {
+    margin-right: 40px;
+  }
+  .deck {
+    min-width: 850px;
+    min-height: 1050px;
+  }
+
+  .deck .card {
+    height: 180px;
+    width: 180px;
+  }
 }
